[gd_scene load_steps=14 format=3 uid="uid://ccygpdkftb6sq"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_o8hfr"]
[ext_resource type="Texture2D" uid="uid://d0slwygb5hksc" path="res://assets/32rogues-0.5.0/32rogues/rogues.png" id="1_rrewk"]
[ext_resource type="PackedScene" uid="uid://bce8wv70ct6us" path="res://scenes/Utility/hurt_box.tscn" id="3_6luhu"]
[ext_resource type="AudioStream" uid="uid://b8qocnmbc3mai" path="res://assets/music and sounds/bloop.wav" id="4_koyrb"]
[ext_resource type="AudioStream" uid="uid://dmuu5gpkbmvkm" path="res://assets/music and sounds/explode.wav" id="5_m6wuv"]
[ext_resource type="AudioStream" uid="uid://ck464tjnnoctv" path="res://assets/music and sounds/ghostScream3.wav" id="6_fgyrx"]
[ext_resource type="AudioStream" uid="uid://buvwdb34yd6rq" path="res://assets/music and sounds/donk.wav" id="6_y4yp5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfmdo"]
size = Vector2(11, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfuim"]
size = Vector2(13, 26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hqpa"]
bg_color = Color(0.129558, 0.129559, 0.129558, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgkus"]
bg_color = Color(0, 0.890196, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ol0hg"]
bg_color = Color(0, 0.301961, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_y7bhf"]
radius = 514.016

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_o8hfr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rrewk")
region_enabled = true
region_rect = Rect2(128, 128, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 2)
shape = SubResource("RectangleShape2D_rfmdo")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
limit_left = 1156
limit_top = -90
limit_right = 3433
limit_bottom = 1645

[node name="HurtBox" parent="." instance=ExtResource("3_6luhu")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-3, 2)
shape = SubResource("RectangleShape2D_mfuim")

[node name="Hp_Bar" type="ProgressBar" parent="."]
offset_left = -26.0
offset_top = -39.0
offset_right = 24.0
offset_bottom = -29.0
theme_override_styles/background = SubResource("StyleBoxFlat_0hqpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_dgkus")
show_percentage = false

[node name="Xp_Bar" type="ProgressBar" parent="."]
offset_left = -26.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = -17.0
theme_override_styles/background = SubResource("StyleBoxFlat_0hqpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_ol0hg")
show_percentage = false

[node name="Attack" type="Node2D" parent="."]

[node name="MagicSwordTimer" type="Timer" parent="Attack"]
wait_time = 1.5

[node name="MagicSwordAttackTimer" type="Timer" parent="Attack/MagicSwordTimer"]
wait_time = 0.075

[node name="LightningTimer" type="Timer" parent="Attack"]

[node name="LightningTimerAttackTimer" type="Timer" parent="Attack/LightningTimer"]

[node name="MonkeyTimer" type="Timer" parent="Attack"]

[node name="MonkeyAttackTimer" type="Timer" parent="Attack/MonkeyTimer"]

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_y7bhf")
debug_color = Color(0.449377, 0.552847, 0.616355, 0.42)

[node name="snd_MagicSword" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_koyrb")
bus = &"sfx"

[node name="snd_LightningStrike" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_m6wuv")
bus = &"sfx"

[node name="snd_CirclingDagger" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_koyrb")
bus = &"sfx"

[node name="snd_PlayerDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fgyrx")
bus = &"sfx"

[node name="snd_PlayerDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y4yp5")
bus = &"sfx"

[node name="DamageRecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/MagicSwordTimer" to="." method="_on_magic_sword_timer_timeout"]
[connection signal="timeout" from="Attack/MagicSwordTimer/MagicSwordAttackTimer" to="." method="_on_magic_sword_attack_timer_timeout"]
[connection signal="timeout" from="Attack/LightningTimer" to="." method="_on_lightning_timer_timeout"]
[connection signal="timeout" from="Attack/LightningTimer/LightningTimerAttackTimer" to="." method="_on_lightning_timer_attack_timer_timeout"]
[connection signal="timeout" from="Attack/MonkeyTimer" to="." method="_on_monkey_timer_timeout"]
[connection signal="timeout" from="Attack/MonkeyTimer/MonkeyAttackTimer" to="." method="_on_monkey_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="timeout" from="DamageRecoveryTimer" to="." method="_on_damage_recovery_timer_timeout"]

[editable path="HurtBox"]
